# message-poc-poc-poc

./: .gitignore  ProjectHome.md  README.md
MessagePocPocPoc/: CMakeLists.txt  kukarek.h  main.cpp  messages.cpp  pocpocpoc.h  test.cpp  test.h
MessagePocPocPoc/msg/: messagecommon.cpp  messagecommon.h  messagedispatcher.cpp  messagedispatcher.h  messagehandler.cpp  messagehandler.h
